Trying to fix gallery load issue on mobile. Added 'DOMContentLoaded' Event listener

--- a/story.css
+++ b/story.css
@@ -372,6 +372,10 @@
       font-size: 1.5rem;
     }
 
+    .full-container {
+      margin: 0 0 20px;
+    }
+
     .eighty-container {
       width: 98%;
     }
